Profile - fixed course display on smaller devices. Added responsibleness to different elements

--- a/src/main/resources/static/css/course_container.css
+++ b/src/main/resources/static/css/course_container.css
@@ -543,7 +543,7 @@
 
             .description .linear_buttons {
                 height: auto;
-                margin-top: 25px;
+                margin: 25px 0;
             }
     
                 .description .button_gray {
@@ -688,69 +688,15 @@
 
         @media screen and (max-width:  480px) {
 
-            /*.course_container .left {*/
-            /*    position: relative;*/
-            /*    display: block;*/
-            /*    width: 100%;*/
-            /*    height: auto;*/
-            /*}*/
+            .course_container .description {
+                padding: 10px 0 0 0;
+            }
 
-            /*        .course_container .photo {*/
-            /*            height: 120px;*/
-            /*            width: 100%;*/
-            /*            left: 0;*/
-            /*            right: 0;*/
-            /*            margin: auto;*/
-            /*        }*/
-
-            /*        .course_container .photo img {*/
-            /*            width: 120px;*/
-            /*        }*/
-
-            /*        .course_container .category {*/
-            /*            display: none;*/
-            /*        }*/
-
-
-
-
-
-            /*.course_container .right {*/
-            /*    position: relative;*/
-            /*    display: block;*/
-            /*    width: 100%;*/
-            /*    height: auto;*/
-            /*    padding-bottom: 10px;*/
-            /*}*/
-
-            /*    .course_container .description {*/
-            /*        padding: 10px 0 0 0;*/
-            /*    }*/
-
-            /*    .description .desc {*/
-            /*        font-size: var(--font-size-phone);*/
-            /*        text-align: center;*/
-            /*    }*/
-
-
-
-            /*    .description .linear_buttons {*/
-            /*        position: relative;*/
-            /*        margin-top: 35px;*/
-            /*        margin-bottom: 12px;*/
-            /*    }*/
-
-            /*        .description .progress_background {*/
-            /*            width: 100%;*/
-            /*        }*/
-
-            /*        .description .button_gray {*/
-            /*            width: 85%;*/
-            /*            margin-top: 7px;*/
-            /*            font-size: var(--font-size-phone);*/
-            /*        }*/
-    
-
+            .description .desc {
+                font-size: var(--font-size-phone);
+                margin-bottom: 0px;
+                text-align: center;
+            }
 
 
 
